# Command_Analyzer_All

./: 0001-Fix-Windows-installation-issues-and-add-PowerShell-s.patch  ADDITIONAL_INFO.md  ADDITIONAL_INFO_REALISTIC.md  APPLY_CHANGES_TO_GITHUB.md  BLACKHAT_ARSENAL_README.md  Commands_analyzed.csv  Commands_analyzed.xlsx  Dockerfile  README.md  README_original_content.md  TOOL_ABSTRACT.md  TOOL_DETAILS.md  Tools_Documentation.md  WINDOWS_INSTALLATION.md  add_advanced_rules.py  add_dll_rules.py  add_docs_with_agent.py  add_lolbas_rules.py  add_os_specific_rules.py  behavioral_analyzer.py  check_dependencies.py  check_installation.py  config.ini  dashboard.py  debug_readme_update.py  demo_README.md  demo_combined_scenario.csv  demo_credential_theft.csv  demo_data_exfiltration.csv  demo_environment.py  demo_lateral_movement.csv  demo_persistence_establishment.csv  demo_ransomware_attack.csv  details.txt  details_detailed.txt  fix_pyproject_toml.py  fix_rules_json.py  github_agent.py  install.bat  install.sh  (+45 more)
github_agent_env/: pyvenv.cfg
sample_data/: sample_data.csv
